--- a/style/res.css
+++ b/style/res.css
@@ -63,11 +63,16 @@
 
 @media (max-width:768px) {
     :root {
-        --h1: 500 2.89rem / 3rem var(--f1);
-        --h2: 500 1.8rem / 2rem var(--f1);
-        --h3: 500 1.4rem / 1.8rem var(--f1);
+        /* --h1: 600 12.89vw / 13vw var(--f1);
+        --h2: 500 4.8rem / 5rem var(--f1);
+        --h3: 500 3.4rem / 3.8rem var(--f1);
         --h4: 500 1.2rem / 1.8rem var(--f1);
-        --p: 100 0.91rem/1.2rem var(--f1);
+        --p: 100 0.91rem/1.2rem var(--f1); */
+                --h1: 600 12.89vw / 13vw var(--f1);
+        --h2: 500 8vw / 8vw var(--f1);
+        --h3: 500 5vw / 5vw var(--f1);
+        --h4: 500 4vw / 4vw var(--f1);
+        --p: 100 0.91rem / 1.2rem var(--f1);
     }
 
     .container-box {
@@ -154,11 +159,29 @@
     }
 
     h5, .h5 {
-    font: var(--h5);
-    /* margin: 0 0 var(--gap4) 0; */
+        font: var(--h5);
+        /* margin: 0 0 var(--gap4) 0; */
+        letter-spacing: var(--gap0);
+        text-transform: uppercase;
+        margin-left: 40px;
+        padding-right: 40px;
+    }
+
+    .round-text span
+ {
+    position: absolute;
+    left: 50%;
+    top: 0%;
+    transform-origin: 0 75px;
+    font-size: 1em;
+    white-space: pre;
+}
+
+
+h4, .h4 {
+    font: var(--h4);
+    margin: 1rem 0 var(--gap4) 0;
     letter-spacing: var(--gap0);
     text-transform: uppercase;
-    margin-left: 30px;
-    padding-right: 40px;
 }
 }
