--- a/style/style.css
+++ b/style/style.css
@@ -492,6 +492,9 @@ a:hover:after {
 /* services section */
 .card-head{
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .sub-ss-col {
     min-height: 100%;
@@ -568,3 +571,4 @@ a:hover:after {
 .fotter-nav .add-section {
     flex: 1 0 35%;
 }
+
