--- a/style/style.css
+++ b/style/style.css
@@ -415,6 +415,7 @@ a:hover:after {
 .time-line-box {
     min-height: 100vh;
     width: 50%;
+    overflow: hidden;
 }
 
 .about-img img {
@@ -428,7 +429,7 @@ a:hover:after {
     flex-direction: column;
     min-height: 90%;
     justify-content: space-between;
-    overflow: hidden;
+/*     overflow: hidden; */
 }
 
 .time-line-list li {
@@ -572,6 +573,7 @@ a:hover:after {
 .fotter-nav .add-section {
     flex: 1 0 35%;
 }
+
 
 
 
